fix Popper z-index

--- a/projectforge-webapp/src/components/design/popper/Popper.module.scss
+++ b/projectforge-webapp/src/components/design/popper/Popper.module.scss
@@ -1,4 +1,5 @@
 .popper {
+  z-index: 99;
   background-color: #fff;
   border: 1px solid #000000;
   border-radius: .25em;
